# EnglishExam

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hifly/englishexam/: ExampleInstrumentedTest.java
app/src/cpp/: com_hifly_englishexam_Native.h  native-lib.cpp  qtandroid.h
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hifly/englishexam/: MainActivity.java  MyApplication.java  MyRadioGroup.java  Native.java  Question.java  SelectionQuestionFragment.java  WebViewActivity.java  WebViewJavaScriptFunction.java  WordPuzzleFragment.java  X5ProcessInitService.java  X5WebViewActivity.java
app/src/main/res/layout/: activity_main.xml  activity_webview_x5.xml  fragment_question.xml  fragment_word_puzzle.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/hifly/englishexam/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
